--- a/davies-burgers.css
+++ b/davies-burgers.css
@@ -15,12 +15,12 @@ a {
 
 nav {
   text-align: center;
-  width: 180px;
 }
 
 nav img {
   display: block;
-  margin: 0 auto;
+  width: 180px;
+  padding: 0 auto;
 }
 
 nav span {
@@ -39,6 +39,7 @@ nav a {
 
 .content {
   width: 100%;
+  height: 500px;
   margin: 10px auto;
   overflow: scroll;
 }
@@ -68,7 +69,6 @@ nav a {
 
 .content .body {
   width: 90%;
-  height: 500px;
   margin: 0 auto;
 }
 
